# dtnma-tools

./: .clang-format  .containerignore  .cproject  .gitignore  .gitlab-ci.yml  .gitmodules  .project  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  apply_format.sh  apply_license.sh  apply_license.tmpl  build.sh  check_format.sh  check_symbols.py  deps.sh  memcheck.supp  prep.sh  run.sh  setenv.sh  sonar-project.properties
docs/: .gitignore  CMakeLists.txt  README.md  conf.py
docs/api/: 00-mainpage.md  01-conventions.md  02-cace.md  02-cace_ari.md  03-refda.md  03-refdm.md  CMakeLists.txt  Conventions.md  Doxyfile.in  README.md  dictionary.txt  footer.html  header.tex  index.html  mainpage.md  refs.bib  sort_dictionary.sh  spellcheck.xsl
docs/api/src/: agent.md  index.md  mgr.md  mysql.md  nmui.md  releases.md  tools.md
docs/doxygen/: Doxyfile.in  README.md  refs.bib
docs/doxygen/src/: index.md  mgr.md  mysql.md  releases.md  tools.md
docs/man/: CMakeLists.txt
src/: CMakeLists.txt  Oops.rej  Oops.rej.orig
src/adm/agent/: adm_amp_agent_impl.c
src/agent/: ingest.c  ingest.h  instr.h  lcc.c  lcc.h  ldc.c  ldc.h  nmagent.c  nmagent.h  rda.c  rda.h
src/ari/: ari.h  ari_access.c  ari_access.h  ari_algo.c  ari_algo.h  ari_base.c  ari_base.h  ari_cbor.c  ari_cbor.h  ari_config.h.in  ari_containers.c  ari_containers.h  ari_data.c  ari_data.h  ari_text.h  ari_text_enc.c  ari_text_str.lex  ari_text_str.yac  ari_text_util.c  ari_text_util.h  ari_text_val.lex  ari_text_val.yac  ari_type.c  ari_type.h  case_ari.c  parameters.c  parameters.h  typing.c  typing.h  util.h
src/cace/: CMakeLists.txt  ari.h  cace_ari.c  cace_data.c  cace_data.h  casestr.h  config.h.in  logging.h  logging_stderr.c  nocase.h  util.h
src/cace/amm/: const.c  const.h  ctrl.c  ctrl.h  edd.c  edd.h  idseg_ref.h  idseg_val.c  idseg_val.h  lookup.c  lookup.h  msg_if.c  msg_if.h  named_type.c  named_type.h  namespace.c  namespace.h  numeric.c  numeric.h  obj_base.c  obj_base.h  obj_desc.c  obj_desc.h  obj_ns.c  obj_ns.h  obj_org.c  obj_org.h  obj_ref.c  obj_ref.h  obj_store.c  obj_store.h  objpat.c  objpat.h  objpat_set.c  objpat_set.h  parameters.c  parameters.h  promote.c  promote.h  range.c  (+13 more)
src/cace/amp/: ion_bp.c  ion_bp.h  msg.c  msg.h  proxy_cli.c  proxy_cli.h  proxy_msg.c  proxy_msg.h  socket.c  socket.h
src/cace/ari/: access.c  access.h  algo.c  algo.h  base.c  base.h  cbor.c  cbor.h  containers.c  containers.h  idseg.c  idseg.h  itemized.c  itemized.h  lit.c  lit.h  macrofile.c  macrofile.h  objpat.c  objpat.h  ref.c  ref.h  text.h  text_enc.c  text_str.lex  text_str.yac  text_util.c  text_util.h  text_val.lex  text_val.yac  time_util.c  time_util.h  type.c  type.h
src/cace/util/: daemon_run.c  daemon_run.h  defs.h  logging.h  logging_stderr.c  mutex.h  nocase.h  range.c  range.h  threadset.c  threadset.h
src/indep_adms/agent/: adm_amp_agent_impl.c
src/ion-app-proxy/: CMakeLists.txt  main.c
src/ion_if/: ion_if.c  ion_if.h  nm_agent.c  nm_mgr.c  nmagent.c
src/ion_if/agent/: adm_amp_agent_impl.c  adm_ion_ipn_admin_impl.c
src/mgr/: agents.c  agents.h  metadata.h  nm_mgr_print.c  nm_mgr_print.h  nm_mgr_rx.c  nm_mgr_rx.h  nm_mgr_sql.c  nm_mgr_sql.h  nm_mgr_ui.c  nm_mgr_ui.h  nm_rest.c  nm_rest.h  nmmgr.c  nmmgr.h  uN  ui_input.c  ui_input.h  y.rej
src/proxy_if/: ion_app_proxy.c  nm_mgr_proxy.c  proxy_if.c  proxy_if.h
src/refda/: CMakeLists.txt  acl.c  acl.h  agent.c  agent.h  alarms.c  alarms.h  binding.c  binding.h  ctrl_exec_ctx.c  ctrl_exec_ctx.h  edd_prod_ctx.c  edd_prod_ctx.h  egress.c  egress.h  endpoint.c  endpoint.h  eval.c  eval.h  eval_ctx.c  eval_ctx.h  exec.c  exec.h  exec_ctx.c  exec_ctx.h  exec_item.c  exec_item.h  exec_proc.c  exec_proc.h  exec_seq.c  exec_seq.h  exec_status.c  exec_status.h  ingress.c  ingress.h  instr.c  instr.h  loader.c  loader.h  msgdata.c  (+16 more)
src/refda-ion/: CMakeLists.txt  main.c
src/refda-socket/: CMakeLists.txt  main.c
src/refda-stdio/: CMakeLists.txt  main.c
src/refda/adm/: iana_display_hints.c  iana_display_hints.h  ietf.h  ietf_alarms.c  ietf_alarms.h  ietf_amm.c  ietf_amm.h  ietf_amm_base.c  ietf_amm_base.h  ietf_amm_semtype.c  ietf_amm_semtype.h  ietf_bp_base.c  ietf_bp_base.h  ietf_dtnma_agent.c  ietf_dtnma_agent.h  ietf_dtnma_agent_acl.c  ietf_dtnma_agent_acl.h  ietf_inet_base.c  ietf_inet_base.h  ietf_network_base.c  ietf_network_base.h
src/refda/amm/: const.c  const.h  ctrl.c  ctrl.h  edd.c  edd.h  ident.c  ident.h  oper.c  oper.h  runctx.c  runctx.h  sbr.c  sbr.h  tbr.c  tbr.h  typedef.c  typedef.h  var.c  var.h
src/refdm/: CMakeLists.txt  agents.c  agents.h  config.h.in  ingress.c  ingress.h  instr.c  instr.h  metadata.c  metadata.h  mgr.c  mgr.h  nm_mgr_print.c  nm_mgr_print.h  nm_mgr_rx.c  nm_mgr_rx.h  nm_mgr_sql.c  nm_mgr_sql.h  nm_mgr_ui.c  nm_mgr_ui.h  nm_rest.c  nm_rest.h  nm_sql.c  nm_sql.h  nmmgr.c  nmmgr.h  ui_input.c  ui_input.h
src/refdm-ion/: CMakeLists.txt  main.c
src/refdm-proxy/: CMakeLists.txt  main.c
src/refdm-socket/: CMakeLists.txt  main.c
src/shared/: nm.h  platform.h
src/shared/adm/: adm.c  adm.h  adm_init.c
src/shared/msg/: msg.c  (+3 more)
src/stdio_if/: stdio_agent.c
test/: CMakeLists.txt  test_ari_algo.c  test_ari_cbor.c  test_ari_text.c  test_ari_text_cbor_loopback.c  test_ari_text_util.c  test_parameters.c  test_rda.c  test_stdio_agent.py  test_typing.c  thunk.c
test/cace/: CMakeLists.txt  fuzz_cace_ari_cbor.cpp  fuzz_cace_ari_uri.cpp  fuzz_common.h  test_amm_const.c  test_amm_ctrl.c  test_amm_lookup.c  test_amm_namespace.c  test_amm_obj_ns.c  test_amm_parameters.c  test_amm_semtype_cnst.c  test_amm_typing.c  test_amp_socket.c  test_ari_algo.c  test_ari_cbor.c  test_ari_data.c  test_ari_roundtrip.c  test_ari_text.c  test_ari_text_cbor_loopback.c  test_ari_text_util.c  test_cace_cpp.cpp  test_util_range.c
test/refda/: CMakeLists.txt  test_adm_ietf_alarms.c  test_adm_ietf_dtnma_agent.c  test_alarms.c  test_amm_const.c  test_amm_ctrl.c  test_eval.c  test_exec.c  test_refda_cpp.cpp  test_reporting.c
test/util/: CMakeLists.txt  agent.c  agent.h  ari.c  ari.h  runctx.c  runctx.h
(+288 files in other folders)
